chore(scoreboard): update remaining files

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
-<tui-root>
-  <app-navbar />
-  <main class="app-main">
+<tui-root [class.fullscreen]="isFullscreen()">
+  @if (showNavbar()) {
+    <app-navbar />
+  }
+  <main class="app-main" [class.fullscreen]="isFullscreen()">
     <router-outlet />
   </main>
 </tui-root>
