--- a/src/app/app.less
+++ b/src/app/app.less
@@ -7,4 +7,17 @@
   padding: 2rem;
   max-width: 1400px;
   margin: 0 auto;
+
+  &.fullscreen {
+    padding: 0;
+    max-width: none;
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+  }
+}
+
+:host ::ng-deep tui-root.fullscreen {
+  background: #000;
 }
