--- a/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.less
+++ b/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.less
@@ -82,8 +82,8 @@
 }
 
 .forms-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 16px;
 }
 
@@ -98,9 +98,5 @@
   .header-right {
     width: 100%;
     justify-content: space-between;
-  }
-
-  .forms-grid {
-    grid-template-columns: 1fr;
   }
 }
