--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+/* Font imports */
+@font-face {
+  font-family: 'Noto Sans Black';
+  src: url('assets/fonts/NotoSans-Black.ttf') format('truetype');
+}
+
 html {
   background-color: var(--tui-background-base);
   color: var(--tui-text-primary);
