--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.less
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.less
@@ -14,13 +14,14 @@
   unicode-bidi: isolate;
 
   &.scoreboard {
-    // Admin preview mode
+    // Admin preview mode - stacked layout for smaller container
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto;
-    grid-gap: 0;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    grid-gap: 2px;
     align-content: start;
     margin: 0;
+    max-width: 100%;
   }
 
   &.fullhd-scoreboard {
@@ -307,26 +308,36 @@
 }
 
 // Responsive breakpoints matching legacy
+// Stack everything vertically for smaller screens
 @media screen and (max-width: 1330px) {
-  .scoreboard-container {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-gap: 0;
-    align-content: start;
-    justify-content: start;
-    margin: 0;
+  .scoreboard-container.fullhd-scoreboard {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    grid-gap: 2px;
+    justify-content: center;
+  }
+
+  .logos-row {
+    justify-content: center;
+    border-right: 1px solid #bababa;
+  }
+
+  .teams-row {
+    width: 100%;
+  }
+
+  .game-info-row {
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 900px) {
-  .scoreboard-container {
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-  }
-
   .team-info {
     width: 200px;
+  }
+
+  .team-name {
+    font-size: 22px;
   }
 }
 
@@ -338,11 +349,45 @@
   .team-info {
     width: 200px;
   }
+
+  // Stack game info in 2x2 grid for mobile
+  .game-info-row {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .info-box {
+    &.quarter,
+    &.game-clock {
+      width: 100%;
+    }
+
+    &.play-clock,
+    &.down-distance {
+      width: 100%;
+    }
+  }
 }
 
 @media screen and (max-width: 420px) {
+  // Full mobile - stack game info in rows
   .game-info-row {
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+
+  .info-box {
+    width: 100%;
+    border-right: none;
+    border-bottom: 1px solid #bababa;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+    &.down-distance {
+      min-width: auto;
+    }
   }
 
   .team-info {
@@ -351,23 +396,25 @@
 
   .team-name {
     white-space: nowrap;
+    font-size: 18px;
   }
 
   .score {
-    font-size: 30px;
+    font-size: 40px;
+  }
+
+  .score-block {
+    width: 60px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .game-info-row {
-    grid-template-columns: auto auto;
-  }
-
   .team-info {
     width: 140px;
   }
 
   .team-name {
     white-space: nowrap;
+    font-size: 16px;
   }
 }
