--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.less
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.less
@@ -373,28 +373,101 @@
 }
 
 @media screen and (max-width: 420px) {
-  // Full mobile - stack game info in rows
-  .game-info-row {
+  // Full mobile - stack teams and reorganize layout
+  .teams-row {
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto;
   }
 
-  .info-box {
-    width: 100%;
-    border-right: none;
-    border-bottom: 1px solid #bababa;
+  .team-block {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    height: auto;
+    padding: 10px;
+  }
 
-    &:last-child {
-      border-bottom: none;
-    }
-
-    &.down-distance {
-      min-width: auto;
-    }
+  .team-a,
+  .team-b {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    height: auto;
+    padding: 0;
   }
 
   .team-info {
-    width: 160px;
+    width: 100%;
+    order: 1;
+    align-items: center;
+    padding-top: 0;
+    grid-column: 1 / -1;
+  }
+
+  .team-name-block {
+    justify-content: center;
+  }
+
+  .timeout-dots {
+    justify-content: center;
+  }
+
+  // Logo and score on same line
+  .team-logo {
+    order: 2;
+    width: auto;
+    flex: 1;
+    height: 80px;
+    grid-row: 2;
+    grid-column: 1;
+  }
+
+  .score-block {
+    order: 3;
+    width: auto;
+    flex: 1;
+    grid-row: 2;
+    grid-column: 2;
+    height: 80px;
+  }
+
+  .team-a,
+  .team-b {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  // Game info: qtr+clock+playclock on one line, down/distance separate
+  .game-info-row {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .info-box {
+    &.quarter {
+      width: 100%;
+      border-right: 1px solid #bababa;
+      border-bottom: 1px solid #bababa;
+    }
+
+    &.game-clock {
+      width: 100%;
+      border-right: 1px solid #bababa;
+      border-bottom: 1px solid #bababa;
+    }
+
+    &.play-clock {
+      width: 100%;
+      border-right: none;
+      border-bottom: 1px solid #bababa;
+    }
+
+    &.down-distance {
+      width: 100%;
+      grid-column: 1 / -1; // Span all columns
+      border-right: none;
+      border-bottom: none;
+      min-width: auto;
+    }
   }
 
   .team-name {
@@ -404,10 +477,6 @@
 
   .score {
     font-size: 40px;
-  }
-
-  .score-block {
-    width: 60px;
   }
 }
 
