--- a/src/app/features/scoreboard/pages/view/scoreboard-view.component.html
+++ b/src/app/features/scoreboard/pages/view/scoreboard-view.component.html
@@ -56,6 +56,11 @@
       [tournamentSponsorLogo]="tournamentSponsorLogo()"
       displayClass="fullhd-scoreboard"
     />
+
+    <div class="play-by-play-panel">
+      <app-play-by-play />
+    </div>
+
     <!-- Sponsor lines -->
     <div class="sponsor-layer">
       @if (showMainSponsor() && mainSponsor()) {
